fixed button overflow

--- a/style.css
+++ b/style.css
@@ -72,7 +72,8 @@ button {
     text-align: center;
     transition: background-color 0.3s ease;
     cursor: pointer;
-    margin-bottom: 5rem;
+    margin-bottom: 4rem;
+    margin-top: 1rem;
 }
 
 button:hover {
